--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1792,107 +1792,107 @@ stories:
   domain: http://www.dailytribune.com/
   link: https://www.dailytribune.com/news/trump-blasts-christian-magazine-that-called-for-his-removal/article_876048c8-e2ea-5c0d-978e-89d410948586.html
 images:
-- name: nazi-invasion-P6180010.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P6180010.jpg
-- name: trucksilo-trucksilo-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dali-two.jpg
-- name: subway-subway-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-bright-sand.jpg
-- name: school-clouds-church-clouds-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-alberto-giacometti.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
-- name: oldroad-old-road-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-smooth-ride.jpg
-- name: aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
-- name: downtheline-downtheline-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-internet-numbers.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-- name: bluelake-deep-connections-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-00-00-00.jpg
-- name: bf-skinner-white-house-lawn-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-white-house-lawn-view.jpg
-- name: old-door-lock-old-door-lock-2-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit.jpg
-- name: downtheline-downtheline-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-monet-one.jpg
-- name: aws-s3-square-yuma-downtown-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-yuma-downtown-square.jpg
-- name: oldbarn-oldbarn-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-ww2-color.jpg
-- name: old-barn-old-barn-1500-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-rain.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-propaganda-leaflets.jpg
-- name: stalin-time-vancouver-waterfront_36556357642_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-vancouver-waterfront_36556357642_o.jpg
-- name: wave-DSC_0291.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0291.jpg
-- name: amusement-park-amusement-park-2-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-granite.jpg
-- name: oldtrain-oldtrain-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-colored-circuits.jpg
-- name: aws-s3-stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
-- name: white-house-whitehouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-far-away.jpg
-- name: stories-new-45-78-800-500-0-max-0-1--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-45-78-800-500-0-max-0-1--5.jpg
-- name: trucksilo-trucksilo-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crabapple.jpg
-- name: old-cabin-oldcabin-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-marcel-duchamp.jpg
+- name: legal-statue-legalstatue-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-kand-two.jpg
+- name: oldhotel-oldhotel-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-neo-instinct.jpg
+- name: old-granary-field-granaryfield-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-rainbow-festival.jpg
+- name: oldhousecars-house-old-cars-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-ww2-color.jpg
+- name: school-clouds-church-clouds-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-rainbow-festival.jpg
+- name: statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+- name: copper-circuit-grafitti-woman-bangs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-grafitti-woman-bangs.jpg
+- name: aws-s3-stories-server-cloud1-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-internet-numbers.jpg
+- name: paris-paris-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-gred-mash.jpg
+- name: braceros-domingo-ulloa-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital-records-building.jpg
+- name: birdhouse-birdhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-soul.jpg
+- name: christianity-christianity-under-construction-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-crabapple.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
+- name: braceros-domingo-ulloa-butterfly-purple-flower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-butterfly-purple-flower.jpg
+- name: la-muse-fire-truck-pulling-out-of-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-fire-truck-pulling-out-of-station.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
+- name: gypsymosaic-gypsy-eyes-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-gan-vogh.jpg
+- name: border-crossing-bordercrossing-matrix.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-matrix.png
+- name: blossombar-bright-sand-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-bright-sand-file-00-00-00-00.jpg
+- name: old-door-lock-old-door-lock-2-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-yellow-collage.jpg
+- name: downtheline-downtheline-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-electricity.jpg
+- name: old-barn-old-barn-1500-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-gan-vogh.jpg
+- name: windowmountain-window-mountain-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-electricity.jpg
+- name: fence-fence-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-soul.jpg
+- name: mosaic-face-mosaic-face-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-cinnamon-rolls.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-emily-carr.JPG
+- name: flower-barbed-wire-flower-barbed-wire-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-purple-storm.jpg
+- name: berlinwall2-berlinwall-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-brush.jpg
+- name: crow_gred_mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_gred_mash.jpg
+- name: dragon_close-up-leaflets-of-the-russian-revolution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-leaflets-of-the-russian-revolution.jpg
+- name: ellis-island-ellis-island-room-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-electricity.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
+- name: powerlines-power-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-space-pizza.jpg
+- name: old-gas-pumps-oldgaspumps-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-monet-one.jpg
 - name: oldcabin-oldcabin-marcel-duchamp.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-marcel-duchamp.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-cinnamon-rolls.jpg
-- name: san-francisco-street-view-san-francisco-street-view-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-light-dali.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-sunday.jpg
-- name: mistywoods-babyfoot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot.jpg
-- name: castle-wall-DSC-0067-plentiful.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-plentiful.JPG
-- name: store-on-corner-oldcabin-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-rain.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-rainbow-festival.jpg
-- name: nazi-invasion-train-france-high-speed-in-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-france-high-speed-in-station.jpg
-- name: nazi-invasion-statue-of-liberty_36744433525_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-of-liberty_36744433525_o.jpg
-- name: nazi-invasion-old-church-in-field.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-church-in-field.jpg
-- name: stalin-time-statue-supreme-court.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-supreme-court.jpg
-- name: downtown-los-angeles-downtown-la-plentiful.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-plentiful.JPG
-- name: nazi-invasion-blechlety-old-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-blechlety-old-racks.jpg
-- name: rain-princess-IMG_8302.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8302.jpg
-- name: art-museum-art-museum-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-smooth-ride.jpg
-- name: death-valley-death-valley-national-park-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-atari-asteroids.jpg
-- name: trucksilo-trucksilo-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-dali.jpg
-- name: 35562068104_fa20c57575-rain-princess.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-rain-princess.jpg
-- name: docks-docks-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-matrix.jpg
-- name: old-church-oldchurch-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dali-two.jpg
-- name: white-house-lawn-white-house-window-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-creativity.jpg
-- name: containership-containership-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-copper-circuit-2.jpg
-- name: locked-up-steam-lock-up-steam-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-mucha-mult.jpg
-- name: walled-garden-walled-garden-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-smooth-ride.jpg
+- name: oldcabin-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-alien-goggles.jpg
+- name: downtown-trucksilo-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smoking-cigarette.jpg
+- name: powerlines-power-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-granite.jpg
+- name: copper-circuit-yellow-tree-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-yellow-tree-in-rocks.jpg
+- name: server-cloud-server-racks-clouds-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-colorful-dream.jpg
+- name: bf-skinner-water-splashing-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-water-splashing-in-rocks.jpg
+- name: cargo-ship-cargo-ship-on-sea-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-atari-asteroids.jpg
+- name: rain-princess-IMG_7559.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7559.jpg
+- name: cargo-ship-cargo-ship-on-sea-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-brush.jpg
+- name: oldtrain-oldtrain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-crabapple.jpg
+- name: old-cabin-oldcabin-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-ww2-dresden.jpg
+- name: oldcabin-oldcabin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crafty-painting.jpg
+- name: blossombar-dry-skin-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dry-skin-file-00-00-50-62.jpg
+- name: stories-new-digital-bits-capital-dc-flag-side-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-digital-bits-capital-dc-flag-side-view.jpg
 ---
 Nothing Has Come Easy This Growing Season.&nbsp;Grant Approved For Dental Clinic Project.&nbsp;Trains To Run Through New Albany City Grid Again.&nbsp;Community Mourns Victim Of Housing Complex Shooting.&nbsp;Antibiotics In Infancy Tied To Allergies In Childhood, New Research Suggests.&nbsp;Anderson Holiday Fest Saturday.&nbsp;Cruise Ships Collide In Cozumel.&nbsp;Georgia Restores Thousands Of Purged Voters.&nbsp;
